# dto/admin_login.go
@@ -1,0 +1,26 @@
+package dto
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/gin_scaffiold/public"
+	"time"
+)
+
+type AdminSessionInfo struct {
+	ID        int       `json:"id"`
+	UserName  string    `json:"user_name"`
+	LoginTime time.Time `json:"login_time"`
+}
+
+type AdminLoginInput struct {
+	UserName string `json:"username" form:"username" comment:"管理员用户名" example:"admin" validate:"required"` //管理员用户名
+	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`                   //密码
+}
+
+func (a *AdminLoginInput) BindValidParam(ctx *gin.Context) error {
+	return public.DefaultGetValidParams(ctx, a)
+}
+
+type AdminLoginOutput struct {
+	Token string `json:"token" form:"token" comment:"token" example:"token" validate:""` //token
+}
